--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,8 @@ local.properties
 .buildpath
 
 # Java Webapp
-war/WEB-INF/
+war/WEB-INF/classes
+war/WEB-INF/lib
 
 #################
 ## Visual Studio
